--- a/RentFlex.Web/Views/Shared/_Layout.cshtml
+++ b/RentFlex.Web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     @*ToastR setup*@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
-    @*dataTables.net*@
+    @*DataTables.net*@
     <link rel="stylesheet" href="//cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css" />
 </head>
 <body>
@@ -52,6 +52,12 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    @*TinyMCE*@
+    <script src="https://cdn.tiny.cloud/1/zuyltggiri7z7ozisnm44sc7xbjdxs6j8rvpm3pd8e0mhqrj/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+    @*Datatables.net*@
+    <script src="//cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+    @*Sweet Alerts*@
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
