--- a/RentFlex.Web/Areas/Owner/Views/Estate/Index.cshtml
+++ b/RentFlex.Web/Areas/Owner/Views/Estate/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@*
+﻿@using RentFlex.Application.Features.Estates;
+@model IEnumerable<EstateDto>
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
