--- a/RentFlex.Web/Areas/Owner/Views/Estate/Index.cshtml
+++ b/RentFlex.Web/Areas/Owner/Views/Estate/Index.cshtml
@@ -5,8 +5,28 @@
 *@
 @{
 }
-@foreach(var item in Model)
-{
-    <p>@item.PropertyName</p>
-    <p>@item.City</p>
-}
+
+<div class="container mt-5">
+    <h1 class="text-center mb-5">Your Estates</h1>
+    <div class="row">
+        @foreach (var estate in Model)
+        {
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="card h-100">
+                    <img class="card-img-top" src="@estate.ImageUrls.FirstOrDefault()" alt="@estate.PropertyName">
+                    <div class="card-body">
+                        <h4 class="card-title">@estate.PropertyName</h4>
+                        <p class="card-text">City <b>@estate.City</b></p>
+                        <p class="card-text">Street: @estate.StreetName</p>
+                        <p class="card-text">Cost Per Day: @estate.CostPerDay.ToString("C")</p>
+                    </div>
+                    <div class="card-footer">
+                        <a asp-action="Details" class="btn btn-primary form-control" asp-route-estateId="@estate.Id">
+                            Details
+                        </a>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</div>
