--- a/RentFlex.Web/Areas/Owner/Views/Estate/Index.cshtml
+++ b/RentFlex.Web/Areas/Owner/Views/Estate/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using RentFlex.Application.Models;
-@model IEnumerable<EstateDto>
+﻿@model IEnumerable<EstateDto>
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
