--- a/RentFlex.Web/Areas/Owner/Views/_ViewImports.cshtml
+++ b/RentFlex.Web/Areas/Owner/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using RentFlex.Web
 @using RentFlex.Web.Models
+@using RentFlex.Application.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
