--- a/RentFlex.Web/Areas/Owner/Views/_ViewImports.cshtml
+++ b/RentFlex.Web/Areas/Owner/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using RentFlex.Web
 @using RentFlex.Web.Models
+@using RentFlex.Web.Models.ViewModels
 @using RentFlex.Application.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
