--- a/RentFlex.Web/Areas/Owner/Views/Estate/Upsert.cshtml
+++ b/RentFlex.Web/Areas/Owner/Views/Estate/Upsert.cshtml
@@ -18,12 +18,43 @@
                     <span asp-validation-for="Estate.PropertyName" class="text-danger"></span>
                 </div>
 
+@*                 <div class="mb-3">
+                    <label asp-for="Estate.Description"></label>
+                    <textarea asp-for="Estate.Description" rows="3" class="form-control"></textarea>
+                    <span asp-validation-for="Estate.Description" class="text-danger"></span>
+                </div> *@
+
                 <div class="mb-3 col-6">
                     <label asp-for="Estate.EstateType"></label>
                     <select asp-for="Estate.EstateType" asp-items="@Model.EstateType" class="form-select">
                         <option disabled selected>--Select Estate Type--</option>
                     </select>
                     <span asp-validation-for="Estate.EstateType" class="text-danger"></span>
+                </div>
+                <div class="mb-3 col-6">
+                    <label asp-for="Estate.CostPerDay"></label>
+                    <input asp-for="Estate.CostPerDay" class="form-control" />
+                    <span asp-validation-for="Estate.CostPerDay" class="text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <label asp-for="Estate.ImageUrls"></label>
+                    <input id="uploadBox" type="file" name="estateImages" class="form-control" multiple accept="image/*" onchange="displaySelectedFiles(event)" /> @* onchange="displaySelectedFiles(event)" *@
+                </div>
+                <div id="imagePreview"></div>
+
+                <div class="col-12">
+                    @if (Model.Estate.Id is not null)
+                    {
+                        <button type="submit" class="btn btn-primary" style="width:150px">Update</button>
+                    }
+                    else
+                    {
+                        <button type="submit" onclick="return ValidateInput()" class="btn btn-primary" style="width:150px">Create</button>
+                    }
+
+                    <a asp-controller="Estate" asp-action="Index" class="btn btn-secondary" style="width:150px">
+                        Back to list
+                    </a>
                 </div>
             </div>
         </div>
@@ -34,4 +65,22 @@
     @{
         <partial name="_ValidationScriptsPartial" />
     }
+    <script src="~/js/tinymce.js"></script>
+    <script src="~/js/upsertEstateImages.js"></script>
+
+    <script>
+        // SweetAlerts setup
+        function ValidateInput() {
+            if (document.getElementById("uploadBox").value == "") {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: 'Please upload an Image!',
+                    footer: '<a href="">Why do I have this issue?</a>'
+                });
+                return false;
+            }
+            return true;
+        }
+    </script>
 }
