--- a/RentFlex.Web/Areas/Owner/Views/Estate/Upsert.cshtml
+++ b/RentFlex.Web/Areas/Owner/Views/Estate/Upsert.cshtml
@@ -13,11 +13,18 @@
 
     <div class="row">
         <div class="col-10">
-            <div class="border p-3 mt-4 row">
-                <div class="col-12 pb-2">
-                    <h2 class="text-primary">@(Model.Estate.Id is not null ? "Update" : "Create") Estate</h2>
-                    <hr />
+            <div class="border p-3 mt-4 row align-items-center">
+                <div class="col-8">
+                    <h2 class="text-primary">@(Model.Estate.Id is not null ? "Edit" : "Create") Estate</h2>
                 </div>
+                @if (Model.Estate.Id is not null)
+                {
+                    <div class="col-4 d-flex justify-content-end">
+                        <a onClick=Delete('/Owner/Estate/Delete/@Model.Estate.Id')
+                           class="btn btn-danger mx-2"><i class="bi bi-trash-fill"></i> Delete</a>
+                    </div>
+                }
+                <hr />
                 <div asp-validation-summary="All"></div>
                 <div class="mb-3">
                     <label asp-for="Estate.PropertyName"></label>
@@ -119,5 +126,34 @@
             }
             return true;
         }
+
+        function Delete(url) {
+            Swal.fire({
+                title: 'Are you sure?',
+                text: "You won't be able to revert this!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, delete it!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        url: url,
+                        type: 'DELETE',
+                        success: function (data) {
+                            if (data.success) {
+                                dataTable.ajax.reload();
+                                toastr.success(data.message);
+                            }
+                            else {
+                                toastr.error(data.message);
+                            }
+                        }
+                    })
+                }
+            })
+        }
+
     </script>
 }
