--- a/RentFlex.Web/Areas/Owner/Views/Estate/Upsert.cshtml
+++ b/RentFlex.Web/Areas/Owner/Views/Estate/Upsert.cshtml
@@ -143,7 +143,7 @@
                         type: 'DELETE',
                         success: function (data) {
                             if (data.success) {
-                                dataTable.ajax.reload();
+                                window.location.href = '@Url.Action("Index", "Estate")';
                                 toastr.success(data.message);
                             }
                             else {
