--- a/RentFlex.Web/Views/Shared/_Layout.cshtml
+++ b/RentFlex.Web/Views/Shared/_Layout.cshtml
@@ -40,6 +40,8 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            @*Adding ToastR*@
+            <partial name="_Notification" />
             @RenderBody()
         </main>
     </div>
