Added Thumbnail logic

--- a/RentFlex.Web/Areas/Owner/Views/Estate/Index.cshtml
+++ b/RentFlex.Web/Areas/Owner/Views/Estate/Index.cshtml
@@ -26,7 +26,7 @@
         {
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card estate-card">
-                    <img class="card-img-top" src="@estate.ImageUrls.FirstOrDefault()" alt="@estate.PropertyName">
+                    <img class="card-img-top" src="@estate.ThumbnailImageUrl" alt="@estate.PropertyName">
                     <div class="card-body">
                         <h4 class="card-title">@estate.PropertyName</h4>
                         <h5 class="card-text estate-type">@estate.EstateType</h5>
