Tweaked Image size

--- a/RentFlex.Web/Areas/Owner/Views/Estate/Index.cshtml.css
+++ b/RentFlex.Web/Areas/Owner/Views/Estate/Index.cshtml.css
@@ -28,3 +28,9 @@
     font-weight: bold;
 }
 
+.fixed-thumbnail {
+    width: 100%;
+    height: 500px;
+    background-size: cover;
+    background-position: center;
+}
