--- a/RentFlex.Web/Views/Shared/_Layout.cshtml
+++ b/RentFlex.Web/Views/Shared/_Layout.cshtml
@@ -31,8 +31,18 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-
-
+                        @if (User!.Identity!.IsAuthenticated)
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Content Managment</a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" asp-area="Owner" asp-controller="Estate" asp-action="Index">Estates</a>
+                                    <a class="dropdown-item" asp-area="Owner" asp-controller="Rental" asp-action="Index">Rentals</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Company</a>
+                                </div>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial"></partial>
                 </div>
