--- a/RentFlex.Web/Areas/Owner/Views/Estate/Upsert.cshtml
+++ b/RentFlex.Web/Areas/Owner/Views/Estate/Upsert.cshtml
@@ -104,13 +104,13 @@
                 }
 
                 <div class="mb-3">
-                    <label asp-for="Estate.PublicateBooking"></label>
-                    <input asp-for="Estate.PublicateBooking" type="checkbox" />
+                    <label asp-for="Estate.PublishBooking"></label>
+                    <input asp-for="Estate.PublishBooking" type="checkbox" />
                 </div>
 
                 <div class="mb-3">
-                    <label asp-for="Estate.PublicateAirbnb"></label>
-                    <input asp-for="Estate.PublicateAirbnb" type="checkbox" />
+                    <label asp-for="Estate.PublishAirbnb"></label>
+                    <input asp-for="Estate.PublishAirbnb" type="checkbox" />
                 </div>
 
                 <div class="col-12">
