--- a/RentFlex.Web/Areas/Owner/Views/Home/Index.cshtml
+++ b/RentFlex.Web/Areas/Owner/Views/Home/Index.cshtml
@@ -1,8 +1,41 @@
-﻿@{
+﻿@model ApplicationStatsDto
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="text-center mt-5">
+        <h1 class="display-4">Welcome to RentFlex</h1>
+        @* <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p> *@
+    </div>
+
+    <div class="row mt-5">
+        <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Total Users</h5>
+                    <p class="card-text">@Model.UsersTotal</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Total Estates</h5>
+                    <p class="card-text">@Model.EstatesTotal</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Total External Services Supported</h5>
+                    <p class="card-text">2</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
