--- a/RentFlex.Web/Areas/Owner/Views/Home/Index.cshtml
+++ b/RentFlex.Web/Areas/Owner/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
 <div class="container">
     <div class="text-center mt-5">
         <h1 class="display-4">Welcome to RentFlex</h1>
+        <h4>Explore our platform for renting properties</h4>
         @* <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p> *@
     </div>
 
