--- a/RentFlex.Web/Areas/Owner/Views/Rental/Index.cshtml
+++ b/RentFlex.Web/Areas/Owner/Views/Rental/Index.cshtml
@@ -1,5 +1,43 @@
-﻿@*
+﻿@model IEnumerable<RentalDto>
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 }
+
+<div class="container">
+    <h1>Rental Details</h1>
+
+    @if (!Model.Any())
+    {
+        <p>No rentals available.</p>
+    }
+    else
+    {
+        <div class="row">
+            @foreach (var rental in Model)
+            {
+                <div class="col-md-6 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Rental Information</h5>
+                            <dl class="row">
+                                <dt class="col-sm-4">Start Date:</dt>
+                                <dd class="col-sm-8">@rental.StartDate.ToShortDateString()</dd>
+
+                                <dt class="col-sm-4">End Date:</dt>
+                                <dd class="col-sm-8">@rental.EndDate.ToShortDateString()</dd>
+
+                                <dt class="col-sm-4">Rent Type:</dt>
+                                <dd class="col-sm-8">@rental.RentType</dd>
+
+                                <dt class="col-sm-4">Estate Name:</dt>
+                                <dd class="col-sm-8">@rental.EstateName</dd>
+                            </dl>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    }
+</div>
