--- a/RentFlex.Web/Areas/Owner/Views/Estate/Index.cshtml
+++ b/RentFlex.Web/Areas/Owner/Views/Estate/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">Your Estates</h2>
+            <h2 class="text-primary">@(!Model.Any() ? "No Estates" : "Your Estates")</h2>
         </div>
         <div class="col-6 text-end">
             <a class="btn btn-primary" asp-controller="Estate" asp-action="Upsert">
