--- a/RentFlex.Web/Areas/Owner/Views/Estate/Upsert.cshtml
+++ b/RentFlex.Web/Areas/Owner/Views/Estate/Upsert.cshtml
@@ -109,8 +109,16 @@
                 </div>
 
                 <div class="mb-3">
-                    <label asp-for="Estate.PublishAirbnb"></label>
-                    <input asp-for="Estate.PublishAirbnb" type="checkbox" />
+                    @if (Model.Estate.PublishAirbnb is false)
+                    {
+                        <label asp-for="Estate.PublishAirbnb"></label>
+                        <input asp-for="Estate.PublishAirbnb" type="checkbox" />
+                    }
+                    else
+                    {
+                        <label asp-for="Estate.PublishAirbnb"></label>
+                        <input asp-for="Estate.PublishAirbnb" type="checkbox" checked disabled />
+                    }
                 </div>
 
                 <div class="col-12">
