--- a/RentFlex.Web/Views/Shared/_Layout.cshtml
+++ b/RentFlex.Web/Views/Shared/_Layout.cshtml
@@ -26,15 +26,15 @@
                 <div class="collapse navbar-collapse" id="navbarColor02">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         @if (User!.Identity!.IsAuthenticated)
                         {
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Content Managment</a>
+                            <li class="nav-item dropdown text-white">
+                                <a class="nav-link dropdown-toggle text-white" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Content Managment</a>
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" asp-area="Owner" asp-controller="Estate" asp-action="Index">Estates</a>
                                     <a class="dropdown-item" asp-area="Owner" asp-controller="Rental" asp-action="Index">Rentals</a>
