--- a/RentFlex.Web/Areas/Owner/Views/Estate/Upsert.cshtml
+++ b/RentFlex.Web/Areas/Owner/Views/Estate/Upsert.cshtml
@@ -118,6 +118,7 @@
                     {
                         <label asp-for="Estate.PublishAirbnb"></label>
                         <input asp-for="Estate.PublishAirbnb" type="checkbox" checked disabled />
+                        @* <input type="hidden" name="Estate.PublishAirbnb" value="true" /> *@
                     }
                 </div>
 
