--- a/RentFlex.Web/Areas/Owner/Views/Estate/Index.cshtml.css
+++ b/RentFlex.Web/Areas/Owner/Views/Estate/Index.cshtml.css
@@ -31,6 +31,7 @@
 .fixed-thumbnail {
     width: 100%;
     height: 500px;
-    background-size: cover;
+    background-size: auto 100%;
     background-position: center;
+    background-repeat: no-repeat;
 }
